@@ -308,7 +308,7 @@ int url_right_mouse_menu(GtkWidget *menu, int type, GtkWidget *tree, GdkEventBut
 		GtkWidget *item;
 		item = gtk_image_menu_item_new_with_label(_("Add URL"));
 		gtk_image_menu_item_set_image(GTK_IMAGE_MENU_ITEM(item),
-				gtk_image_new_from_stock(GTK_STOCK_ADD, GTK_ICON_SIZE_MENU));
+				gtk_image_new_from_stock("gmpc-add-url", GTK_ICON_SIZE_MENU));
 		gtk_menu_shell_append(GTK_MENU_SHELL(menu), item);
 		g_signal_connect(G_OBJECT(item), "activate", G_CALLBACK(url_start), NULL);
 		return 1;
